devops/flux/applications/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdd-frontend
  namespace: tdd-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdd-frontend
  template:
    metadata:
      labels:
        app: tdd-frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/uditdataxis12345/tdd-react-frontend:20261007061145-8e49edc # {"$imagepolicy": "flux-system:tdd-react-frontend"}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
