devops/flux/applications/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdd-frontend
  namespace: tdd-frontend

spec:
  selector:
    app: tdd-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
