devops/flux/applications/frontend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tdd-frontend
  namespace: tdd-frontend
spec:
  parentRefs:
    - name: tdd-gateway
      namespace: envoy-gateway-system

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tdd-frontend
          port: 80
